--- a/contacts.html
+++ b/contacts.html
@@ -137,7 +137,7 @@
                 <div class="contact-box">
                   <h6 class="contact__box-title">Our Address</h6>
                   <ul class="contact__box-list list-unstyled">
-                    <li>Address Here</li>
+                    <li>590/16 phan văn trị-phường 7-gò vấp-HCM</li>
                   </ul>
                   <a href="#" class="btn btn__link">Get Directions</a>
                 </div><!-- /.contact-box -->
