--- a/faqs.html
+++ b/faqs.html
@@ -115,29 +115,27 @@
           <div class="col-sm-12 col-md-12 col-lg-6">
             <div class="accordion-item">
               <div class="accordion__item-header" data-toggle="collapse" data-target="#collapse1">
-                <a class="accordion__item-title" href="#">Who is the owner of the restaurant?</a>
+                <a class="accordion__item-title" href="#">Ai là người sở hữu chính của nhà hàng LisaBB</a>
               </div><!-- /.accordion-item-header -->
               <div id="collapse1" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
+                  <p>...</p>
                 </div><!-- /.accordion-item-body -->
               </div>
             </div><!-- /.accordion-item -->
             <div class="accordion-item">
               <div class="accordion__item-header" data-toggle="collapse" data-target="#collapse2">
-                <a class="accordion__item-title" href="#">When did the restaurant established?</a>
+                <a class="accordion__item-title" href="#">Nhà hàng thành lập khi nào ?</a>
               </div><!-- /.accordion-item-header -->
               <div id="collapse2" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
+                  <p>....</p>
                 </div><!-- /.accordion-item-body -->
               </div>
             </div><!-- /.accordion-item -->
             <div class="accordion-item">
               <div class="accordion__item-header" data-toggle="collapse" data-target="#collapse3">
-                <a class="accordion__item-title" href="#">How many chefs on the restaurant?</a>
+                <a class="accordion__item-title" href="#">Có bao nhiêu đầu bếp cho nhà hàng></a>
               </div><!-- /.accordion-item-header -->
               <div id="collapse3" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
@@ -148,7 +146,7 @@
             </div><!-- /.accordion-item -->
             <div class="accordion-item">
               <div class="accordion__item-header" data-toggle="collapse" data-target="#collapse4">
-                <a class="accordion__item-title" href="#">Can i have a reservation on the restaurant?</a>
+                <a class="accordion__item-title" href="#">Chúng tôi có được phục vụ khi dùng bữa tại Nhà Hàng?</a>
               </div><!-- /.accordion-item-header -->
               <div id="collapse4" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
@@ -161,7 +159,7 @@
           <div class="col-sm-12 col-md-12 col-lg-6">
             <div class="accordion-item">
               <div class="accordion__item-header" data-toggle="collapse" data-target="#collapse5">
-                <a class="accordion__item-title" href="#">How many tables in the resturant?</a>
+                <a class="accordion__item-title" href="#">Quy mô nhà hàng có lớn không ?</a>
               </div><!-- /.accordion-item-header -->
               <div id="collapse5" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
@@ -172,7 +170,7 @@
             </div><!-- /.accordion-item -->
             <div class="accordion-item">
               <div class="accordion__item-header" data-toggle="collapse" data-target="#collapse6">
-                <a class="accordion__item-title" href="#">Where is the restaurant?</a>
+                <a class="accordion__item-title" href="#">Vị trí chính xác của nhà hàng là ở đâu?</a>
               </div><!-- /.accordion-item-header -->
               <div id="collapse6" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
@@ -183,7 +181,7 @@
             </div><!-- /.accordion-item -->
             <div class="accordion-item">
               <div class="accordion__item-header" data-toggle="collapse" data-target="#collapse7">
-                <a class="accordion__item-title" href="#">How many workers on the restaurant?</a>
+                <a class="accordion__item-title" href="#">Có bao nhiêu món ăn ở nhà hàng?</a>
               </div><!-- /.accordion-item-header -->
               <div id="collapse7" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
@@ -194,7 +192,7 @@
             </div><!-- /.accordion-item -->
             <div class="accordion-item">
               <div class="accordion__item-header" data-toggle="collapse" data-target="#collapse8">
-                <a class="accordion__item-title" href="#">How many dishes in the resturant?</a>
+                <a class="accordion__item-title" href="#">Có bao nhiêu thực đơn chính ở nhà Hàng ?</a>
               </div><!-- /.accordion-item-header -->
               <div id="collapse8" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
