--- a/our-chefs.html
+++ b/our-chefs.html
@@ -100,8 +100,8 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12">
-            <span class="pagetitle__subheading">Ready To Serve</span>
-            <h1 class="pagetitle__heading">Our Chefs</h1>
+            <span class="pagetitle__subheading">Tận Tâm</span>
+            <h1 class="pagetitle__heading">Đầu bếp của chúng tôi</h1>
           </div><!-- /.col-lg-12 -->
         </div><!-- /.row -->
       </div><!-- /.container -->
@@ -116,7 +116,7 @@
           <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
             <div class="heading heading-layout2 text-center mb-40">
               <h2 class="heading__title">Our Talented Chefs</h2>
-              <p class="heading__desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt, quibusdam non facere dolores laudantium laboriosam necessitatibus natus odio officiis tempora unde, perspiciatis libero repellendus ex! Doloremque dignissimos commodi vero asperiores.</p>
+              <p class="heading__desc"> kinh nghiệm 16 năm làm việc trong lĩnh vực nhà hàng khách sạn cao cấp trên cả nước. Kiến thức chuyên môn về dinh dưỡng, món ăn phong phú đa dạng. Sẽ cho quý khách cảm nhận từ món ăn đến chất lượng dinh dưỡng tốt nhất. </p>
               <img src="assets/images/about/signature.png" alt="about">
             </div><!-- /.heading -->
           </div><!-- /.col-lg-6 -->
@@ -262,7 +262,7 @@
           <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
             <div class="heading heading-white text-center mb-50">
               <span class="heading__subtitle">Our Guestbook</span>
-              <h2 class="heading__title">People Say About Us!</h2>
+              <h2 class="heading__title">Đánh giá của khách hàng về đầu bếp</h2>
               <div class="heading__icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                   <path
@@ -292,11 +292,11 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, repellendus ipsum in cumque eos facilis. Facilis, fuga deserunt rem quisquam, sed voluptate assumenda, quasi autem natus consectetur accusamus iste sunt?</p>
+                  <p class="testimonial__desc">"Đầu bếp ở đây thực sự là nghệ sĩ ẩm thực. Mỗi món đều là một tác phẩm nghệ thuật, kết hợp hương vị độc đáo và thiết kế sáng tạo."</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
-                  <h5 class="testimonial__meta-title">John Peter</h5>
-                  <p class="testimonial__meta-desc">Guest</p>
+                  <h5 class="testimonial__meta-title">Mr.Rikka</h5>
+                  <p class="testimonial__meta-desc">Khách Hàng</p>
                 </div><!-- /.testimonial-meta -->
               </div><!-- /. testimonial-item -->
               <!-- Testimonial Item #2 -->
@@ -313,11 +313,11 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus itaque nemo, ipsam ad quidem qui accusamus. Molestias eum sapiente minus quos blanditiis quisquam modi iure ipsum, numquam id distinctio corporis?</p>
+                  <p class="testimonial__desc">"Sự sáng tạo của đầu bếp là điểm nhấn của nhà hàng. Mỗi lần ghé thăm, tôi được trải nghiệm những hương vị mới mẻ và thú vị."</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
-                  <h5 class="testimonial__meta-title">Sami Wade</h5>
-                  <p class="testimonial__meta-desc">Guest</p>
+                  <h5 class="testimonial__meta-title">Mrs. Anna</h5>
+                  <p class="testimonial__meta-desc">Khách Hàng</p>
                 </div><!-- /.testimonial-meta -->
               </div><!-- /. testimonial-item -->
               <!-- Testimonial Item #3 -->
@@ -334,11 +334,11 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae consectetur, neque expedita delectus fugiat quidem dolorem laborum quos tempora, nihil distinctio, quisquam et sequi id ducimus eaque quod eum cum.</p>
+                  <p class="testimonial__desc">"Đầu bếp ở đây không chỉ là người nấu ăn, mà còn là những người nghệ sĩ sáng tạo. Thực phẩm không chỉ ngon miệng mà còn là một tác phẩm nghệ thuật trên đĩa."</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
-                  <h5 class="testimonial__meta-title">Martin Hope</h5>
-                  <p class="testimonial__meta-desc">ProMov</p>
+                  <h5 class="testimonial__meta-title">Mr. Andy</h5>
+                  <p class="testimonial__meta-desc">Khách Hàng</p>
                 </div><!-- /.testimonial-meta -->
               </div><!-- /. testimonial-item -->
               <!-- Testimonial Item #4 -->
@@ -355,11 +355,11 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum minus iste temporibus accusamus ullam doloribus quod voluptatem facilis, deserunt labore? Fugit, ullam veniam beatae accusantium dolorum itaque ipsa id tempora.”</p>
+                  <p class="testimonial__desc">"Sự tỉ mỉ và chăm sóc của đầu bếp đánh bại mọi kỳ vọng. Mỗi chi tiết trong từng bữa ăn đều thể hiện sự chuyên nghiệp và tâm huyết của họ."</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
-                  <h5 class="testimonial__meta-title">John Peter</h5>
-                  <p class="testimonial__meta-desc">Guest</p>
+                  <h5 class="testimonial__meta-title">Mr. Karras</h5>
+                  <p class="testimonial__meta-desc">Khách Hàng</p>
                 </div><!-- /.testimonial-meta -->
               </div><!-- /. testimonial-item -->
               <!-- Testimonial Item #5 -->
@@ -376,34 +376,14 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis aliquam id at quidem porro, omnis tempore nam alias optio sapiente beatae fugit est dignissimos non necessitatibus? Minima non omnis nobis.</p>
+                  <p class="testimonial__desc">"Đầu bếp ở đây là nguồn cảm hứng. Họ không ngừng đổi mới, mang đến cho khách hàng những trải nghiệm ẩm thực không ngừng độc đáo và phong cách."</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
-                  <h5 class="testimonial__meta-title">Sami Wade</h5>
-                  <p class="testimonial__meta-desc">Guest</p>
+                  <h5 class="testimonial__meta-title">Mrs. Karren</h5>
+                  <p class="testimonial__meta-desc">Khách hàng</p>
                 </div><!-- /.testimonial-meta -->
               </div><!-- /. testimonial-item -->
-              <!-- Testimonial Item #6 -->
-              <div class=" testimonial-item">
-                <div class="testimonial__icon"></div>
-                <div class="testimonial__content">
-                  <div class="testimonial__thumb">
-                    <img src="assets/images/testimonials/thumbs/3.png" alt="author thumb">
-                  </div><!-- /.testimonial-thumb -->
-                  <div class="testimonial__rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                  </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam eligendi cupiditate temporibus nobis, ipsum sint minima non sit! Porro molestiae tempora ab fuga iusto odio iure error quis sit soluta.</p>
-                </div><!-- /.testimonial-content -->
-                <div class="testimonial__meta">
-                  <h5 class="testimonial__meta-title">Martin Hope</h5>
-                  <p class="testimonial__meta-desc">ProMov</p>
-                </div><!-- /.testimonial-meta -->
-              </div><!-- /. testimonial-item -->
+  
             </div><!-- /.carousel -->
           </div><!-- /.col-lg-12 -->
         </div><!-- /.row -->
@@ -421,8 +401,8 @@
               <div class="banner__content-text">
                 <div class="banner__content-text-inner">
                   <div class="heading">
-                    <span class="heading__subtitle">Hello Dear</span>
-                    <h2 class="heading__title">Welcome To LisaBB</h2>
+                    <span class="heading__subtitle"> Trân trọng</span>
+                    <h2 class="heading__title">Những lời đánh giá</h2>
                     <div class="heading__icon">
                       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                         <path
@@ -430,7 +410,7 @@
                           transform="translate(-505 -925)"></path>
                       </svg>
                     </div>
-                    <p class="heading__desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita et sequi fugiat ut, quasi ad dolorem quo eum doloremque pariatur in itaque similique tempora excepturi consectetur. Molestiae dolorem sunt eum.</p>
+                    <p class="heading__desc">Những lời đánh giá của Khách Hàng cũng như là kinh nghiệm giúp cho chúng tôi nói chung và LisaBB nói riêng ngày càng hoàn thiện hơn, chúng tôi xin được phép cảm ơn về những đánh giá tốt đẹp này.</p>
                     <img src="assets/images/about/signature.png" alt="signature">
                   </div><!-- /.heading -->
                 </div><!-- /.banner__content-text-inner -->
@@ -447,36 +427,7 @@
     <!-- =====================
        Clients
     ======================== -->
-    <section id="clients" class="clients text-center pt-0 pb-80">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-8 offset-lg-2">
-            <h2 class="heading__title mb-30">A recognized track-record of excellence</h2>
-            <div class="carousel owl-carousel" data-slide="6" data-slide-md="4" data-slide-sm="3" data-autoplay="true"
-              data-nav="false" data-dots="false" data-space="0" data-loop="true" data-speed="700">
-              <div class="client">
-                <a href="#"><img src="assets/images/clients/1.png" alt="client"></a>
-              </div><!-- /.client -->
-              <div class="client">
-                <a href="#"><img src="assets/images/clients/2.png" alt="client"></a>
-              </div><!-- /.client -->
-              <div class="client">
-                <a href="#"><img src="assets/images/clients/3.png" alt="client"></a>
-              </div><!-- /.client -->
-              <div class="client">
-                <a href="#"><img src="assets/images/clients/4.png" alt="client"></a>
-              </div><!-- /.client -->
-              <div class="client">
-                <a href="#"><img src="assets/images/clients/5.png" alt="client"></a>
-              </div><!-- /.client -->
-              <div class="client">
-                <a href="#"><img src="assets/images/clients/6.png" alt="client"></a>
-              </div><!-- /.client -->
-            </div><!-- /.carousel -->
-          </div><!-- /.col-lg-12 -->
-        </div><!-- /.row -->
-      </div><!-- /.container -->
-    </section><!-- /.clients -->
+    
 
     <!-- ========================
       Footer
