--- a/our-story.html
+++ b/our-story.html
@@ -10,6 +10,7 @@
   <title>LisaBB</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Rubik:400,500,700%7cShadows+Into+Light&display=swap">
+  
   <link rel="stylesheet" href="assets/css/libraries.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
@@ -100,7 +101,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12">
             <span class="pagetitle__subheading">All About Us</span>
-            <h1 class="pagetitle__heading">Our Story</h1>
+            <h1 class="pagetitle__heading">Về chúng tôi</h1>
           </div><!-- /.col-lg-12 -->
         </div><!-- /.row -->
       </div><!-- /.container -->
@@ -117,8 +118,8 @@
               <div class="banner__content-text" data-aos="fade-right">
                 <div class="banner__content-text-inner">
                   <div class="heading">
-                    <span class="heading__subtitle">Hello Dear</span>
-                    <h2 class="heading__title">Welcome To LisaBB</h2>
+                    <span class="heading__subtitle">Thân chào</span>
+                    <h2 class="heading__title">Welcome to LisaBB</h2>
                     <div class="heading__icon">
                       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                         <path
@@ -126,7 +127,10 @@
                           transform="translate(-505 -925)"></path>
                       </svg>
                     </div>
-                    <p class="heading__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, voluptatem reiciendis tenetur alias quas neque minima repellendus obcaecati quisquam consectetur quam ut. Deserunt voluptatum molestiae expedita similique nulla nam totam?</p>
+                    <p class="heading__desc">
+                      LisaBB là chi nhánh đầu tiên về dịch vụ F&B thuộc công ty Lisala Group 
+                      hoạt động chính trong các lĩnh vực bao gồm: healthy food, tư vấn sức khỏe và tinh thần cho người sử dụng.
+                    </p>
                     <img src="assets/images/about/signature.png" alt="signature">
                   </div><!-- /.heading -->
                 </div><!-- /.banner__content-text-inner -->
@@ -151,8 +155,8 @@
               <div class="banner__content-text" data-aos="fade-left">
                 <div class="banner__content-text-inner">
                   <div class="heading mb-40">
-                    <span class="heading__subtitle">A Warm, Charming Atmosphere</span>
-                    <h2 class="heading__title">Private Dining & Events</h2>
+                    <span class="heading__subtitle">Sức khỏe là sự giàu có</span>
+                    <h2 class="heading__title">tăng sức khỏe nhận tài lộc</h2>
                     <div class="heading__icon">
                       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                         <path
@@ -160,10 +164,15 @@
                           transform="translate(-505 -925)"></path>
                       </svg>
                     </div>
-                    <p class="heading__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, velit aliquam soluta dicta ullam dignissimos vero natus pariatur sapiente consectetur, cum fuga officiis harum perspiciatis, quo eos? Explicabo, officiis quia?</p>
+                    <p class="heading__desc">
+                      LisaBB mang đến bạn những món cá hồi nướng thập hương  nhằm cải thiện sứ đề kháng, nhưng vẫn tiết kiệm cho bạn.
+                    </p>
+                    <p class="heading__desc">
+                      Hơn 15 loại nước sốt và hàng trăm nguyên liệu khác nhau được đầu bếp kết hợp khéo léo để mang lại hương vị tuyệt vời hoặc bạn có thể tự chọn cho mình 1 loại nước sốt hợp với khẩu vị của bạn.
+                      
+                    </p>
                   </div><!-- /.heading -->
-                  <a href="#" class="btn btn__secondary btn__link mx-2 my-1">Explore Events</a>
-                  <a href="#" class="btn btn__primary mx-2 my-1">Explore Events</a>
+                  
                 </div><!-- /.banner__content-text-inner -->
               </div><!-- /.banner__content-text -->
               <div class="banner__content-img" data-aos="fade-right">
@@ -184,8 +193,8 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
             <div class="heading heading-white text-center mb-50">
-              <span class="heading__subtitle">Our Guestbook</span>
-              <h2 class="heading__title">People Say About Us!</h2>
+              <span class="heading__subtitle">Đánh giá</span>
+              <h2 class="heading__title">Nhận định của người dùng</h2>
               <div class="heading__icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                   <path
@@ -215,11 +224,11 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Description text”</p>
+                  <p class="testimonial__desc">"Nhà hàng này là một điểm đến tuyệt vời cho những người muốn bắt đầu ngày của mình bằng những bữa ăn sáng lành mạnh. Tôi đã thưởng thức một bữa sáng với các loại ngũ cốc hữu cơ và trái cây tươi ngon. Mọi thứ đều tuyệt vời và giúp tôi có năng lượng cho cả buổi sáng."</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
-                  <h5 class="testimonial__meta-title">John Peter</h5>
-                  <p class="testimonial__meta-desc">Guest</p>
+                  <h5 class="testimonial__meta-title">Mr.Peter</h5>
+                  <p class="testimonial__meta-desc">Người Dùng</p>
                 </div><!-- /.testimonial-meta -->
               </div><!-- /. testimonial-item -->
               <!-- Testimonial Item #2 -->
@@ -236,11 +245,11 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Description Text”</p>
+                  <p class="testimonial__desc">"Những lựa chọn ẩm thực ở đây thật sự ấn tượng. Tôi đã thử nhiều món từ menu, và tất cả đều ngon miệng mà không làm mất đi giá trị dinh dưỡng. Thực phẩm tại đây không chỉ ngon mắt mà còn đảm bảo sự lành mạnh."</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
-                  <h5 class="testimonial__meta-title">Sami Wade</h5>
-                  <p class="testimonial__meta-desc">Guest</p>
+                  <h5 class="testimonial__meta-title">Mrs.Wade</h5>
+                  <p class="testimonial__meta-desc">Nhà Đánh Giá Ẩm Thực</p>
                 </div><!-- /.testimonial-meta -->
               </div><!-- /. testimonial-item -->
               <!-- Testimonial Item #3 -->
@@ -257,11 +266,11 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Description Text ”</p>
+                  <p class="testimonial__desc">"Nhà hàng này không chỉ là nơi tuyệt vời để thưởng thức ẩm thực lành mạnh mà còn là không gian lý tưởng cho các cuộc họp gia đình. Bàn ghế thoải mái, không khí dễ chịu và dịch vụ tận tâm tạo nên một trải nghiệm ẩm thực đáng nhớ."</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
-                  <h5 class="testimonial__meta-title">Martin Hope</h5>
-                  <p class="testimonial__meta-desc">ProMov</p>
+                  <h5 class="testimonial__meta-title">Dr.Hope</h5>
+                  <p class="testimonial__meta-desc">Chuyên Gia Dinh Dưỡng</p>
                 </div><!-- /.testimonial-meta -->
               </div><!-- /. testimonial-item -->
               <!-- Testimonial Item #4 -->
@@ -278,11 +287,11 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Description Text”</p>
+                  <p class="testimonial__desc">"Tôi là người ăn chay và thường xuyên gặp khó khăn khi tìm kiếm nhà hàng phù hợp. Nhưng ở đây, tôi đã thấy mình có rất nhiều lựa chọn ngon miệng. Menu đa dạng và sáng tạo, thực sự là một địa điểm thú vị cho cả người ăn chay và không ăn chay."</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
-                  <h5 class="testimonial__meta-title">John Peter</h5>
-                  <p class="testimonial__meta-desc">Guest</p>
+                  <h5 class="testimonial__meta-title">Mr.Peter</h5>
+                  <p class="testimonial__meta-desc">Khách Hàng</p>
                 </div><!-- /.testimonial-meta -->
               </div><!-- /. testimonial-item -->
               <!-- Testimonial Item #5 -->
@@ -299,11 +308,11 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Description Text”</p>
+                  <p class="testimonial__desc">"Đội ngũ nhân viên ở đây rất thân thiện và tận tâm. Họ luôn sẵn sàng giúp đỡ và đảm bảo rằng mọi khách hàng đều có một trải nghiệm ẩm thực tốt nhất có thể. Dịch vụ này thực sự làm tăng thêm giá trị cho việc ghé thăm nhà hàng."</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
-                  <h5 class="testimonial__meta-title">Sami Wade</h5>
-                  <p class="testimonial__meta-desc">Guest</p>
+                  <h5 class="testimonial__meta-title">Mr.Kade</h5>
+                  <p class="testimonial__meta-desc">Khách Hàng</p>
                 </div><!-- /.testimonial-meta -->
               </div><!-- /. testimonial-item -->
               <!-- Testimonial Item #6 -->
@@ -320,11 +329,11 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Description Text”</p>
+                  <p class="testimonial__desc">“Tôi đã trải nghiệm LisaBB, đây là một điểm đến tuyệt vời trong những ngày cuối tuần của gia đình tôi.”</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
-                  <h5 class="testimonial__meta-title">Martin Hope</h5>
-                  <p class="testimonial__meta-desc">ProMov</p>
+                  <h5 class="testimonial__meta-title">Mrs.Wendy</h5>
+                  <p class="testimonial__meta-desc">Chuyên Gia Dinh Dưỡng</p>
                 </div><!-- /.testimonial-meta -->
               </div><!-- /. testimonial-item -->
             </div><!-- /.carousel -->
@@ -346,8 +355,8 @@
                 <img src="assets/images/icons/1.png" alt="icon">
               </div><!-- /.fancybox-icon -->
               <div class="fancybox__content">
-                <h4 class="fancybox__title">Daily Fresh Menus</h4>
-                <p class="fancybox__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas soluta laudantium explicabo quasi vero repellendus veritatis a debitis, magnam rerum dolorum optio illum enim et in harum ratione quod rem?</p>
+                <h4 class="fancybox__title">Thực phẩm xanh tốt</h4>
+                <p class="fancybox__desc">Tại nhà hàng chúng tôi, chúng tôi tự hào về việc chọn lựa và sử dụng thực phẩm xanh tốt mỗi ngày để tạo ra những bữa ăn lành mạnh và ngon miệng.</p>
               </div><!-- /.fancybox-content -->
             </div><!-- /.fancybox-item -->
           </div><!-- /.col-lg-4 -->
@@ -358,9 +367,8 @@
                 <img src="assets/images/icons/2.png" alt="icon">
               </div><!-- /.fancybox-icon -->
               <div class="fancybox__content">
-                <h4 class="fancybox__title">Fresh Ingredient</h4>
-                <p class="fancybox__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque illo, ducimus consectetur deserunt, esse, natus repellat voluptatum ut exercitationem dolor dolorem! Laboriosam sed provident modi, eos aliquam vel porro mollitia.
-                </p>
+                <h4 class="fancybox__title">Không gian xanh tươi</h4>
+                <p class="fancybox__desc" >Với màu sắc nhẹ nhàng, cây xanh và ánh sáng tự nhiên, chúng tôi tạo ra một môi trường thoải mái và ấm cúng, hoàn hảo cho bữa ăn thư giản. </p>
               </div><!-- /.fancybox-content -->
             </div><!-- /.fancybox-item -->
           </div><!-- /.col-lg-4 -->
@@ -371,8 +379,8 @@
                 <img src="assets/images/icons/3.png" alt="icon">
               </div><!-- /.fancybox-icon -->
               <div class="fancybox__content">
-                <h4 class="fancybox__title">Tasty Meals</h4>
-                <p class="fancybox__desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus accusantium distinctio culpa praesentium dolorem! Corporis, accusantium odit! Maxime excepturi nulla deleniti, ipsam alias porro odit id. Reprehenderit sint beatae quidem?</p>
+                <h4 class="fancybox__title">Hương vị đậm đà</h4>
+                <p class="fancybox__desc">Những hương vị đậm đà tại nhà hàng chúng tôi là một hòa quyện tuyệt vời của gia vị, thảo mộc. Mỗi khẩu phần đều mang đến trải nghiệm ẩm thực sâu sắc và đặc sắc.</p>
               </div><!-- /.fancybox-content -->
             </div><!-- /.fancybox-item -->
           </div><!-- /.col-lg-4 -->
@@ -383,8 +391,8 @@
                 <img src="assets/images/icons/4.png" alt="icon">
               </div><!-- /.fancybox-icon -->
               <div class="fancybox__content">
-                <h4 class="fancybox__title">Creative Chef</h4>
-                <p class="fancybox__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate cum perferendis dolorem sed non officia ipsa vel ratione nihil architecto ad, dolores, et vitae, repellendus possimus corrupti praesentium molestias dolorum!</p>
+                <h4 class="fancybox__title">Đầu bếp sáng tạo</h4>
+                <p class="fancybox__desc">Đầu bếp tại nhà hàng chúng tôi không ngừng sáng tạo, kết hợp tinh tế và nguyên liệu tươi ngon để tạo ra những món ăn độc đáo, hấp dẫn và đậm chất nghệ thuật ẩm thực.</p>
               </div><!-- /.fancybox-content -->
             </div><!-- /.fancybox-item -->
           </div><!-- /.col-lg-4 -->
@@ -395,8 +403,9 @@
                 <img src="assets/images/icons/5.png" alt="icon">
               </div><!-- /.fancybox-icon -->
               <div class="fancybox__content">
-                <h4 class="fancybox__title">Real Pizza</h4>
-                <p class="fancybox__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, ducimus. Molestias temporibus nulla error unde laudantium maiores, numquam sit quod fugiat atque suscipit nam inventore earum optio iusto quae. Nobis? 
+                <h4 class="fancybox__title">Salad Độc đáo</h4>
+                <p class="fancybox__desc"> 
+                  Salad đặc biệt của chúng tôi là một hòa quyện tuyệt vời của rau sống tươi ngon, trái cây chín mọng và gia vị độc đáo. Mỗi miếng ăn mang lại trải nghiệm hương vị độc đáo và bổ dưỡng. </p> 
                 </p>
               </div><!-- /.fancybox-content -->
             </div><!-- /.fancybox-item -->
@@ -408,8 +417,8 @@
                 <img src="assets/images/icons/6.png" alt="icon">
               </div><!-- /.fancybox-icon -->
               <div class="fancybox__content">
-                <h4 class="fancybox__title">Awesome Coffee</h4>
-                <p class="fancybox__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt soluta repudiandae quas exercitationem. Recusandae itaque necessitatibus autem saepe in! Pariatur deleniti iusto provident? Fugit iure perferendis nostrum illum quae minus.</p>
+                <h4 class="fancybox__title">Nước ép trái cây tươi</h4>
+                <p class="fancybox__desc">Nước ép trái cây tươi tại nhà hàng chúng tôi là sự kết hợp hoàn hảo của trái cây chín mọng, mang lại hương vị tươi mới và dinh dưỡng tối đa.</p>
               </div><!-- /.fancybox-content -->
             </div><!-- /.fancybox-item -->
           </div><!-- /.col-lg-4 -->
