--- a/faqs.html
+++ b/faqs.html
@@ -119,7 +119,7 @@
               </div><!-- /.accordion-item-header -->
               <div id="collapse1" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
-                  <p>...</p>
+                  <p>Nhà hàng LisaBB do ông: Phan Tấn Châu là chủ sở hữu</p>
                 </div><!-- /.accordion-item-body -->
               </div>
             </div><!-- /.accordion-item -->
@@ -129,7 +129,7 @@
               </div><!-- /.accordion-item-header -->
               <div id="collapse2" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
-                  <p>....</p>
+                  <p>Nhà hàng LisaBB thành lập ngày 15-8-2023 </p>
                 </div><!-- /.accordion-item-body -->
               </div>
             </div><!-- /.accordion-item -->
@@ -139,8 +139,7 @@
               </div><!-- /.accordion-item-header -->
               <div id="collapse3" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
+                  <p>Nhà hàng có 02 bếp chính và 2 phụ bếp</p>
                 </div><!-- /.accordion-item-body -->
               </div>
             </div><!-- /.accordion-item -->
@@ -150,8 +149,7 @@
               </div><!-- /.accordion-item-header -->
               <div id="collapse4" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
+                  <p> Nhà hàng có phục vụ ăn uống tại chỗ</p>
                 </div><!-- /.accordion-item-body -->
               </div>
             </div><!-- /.accordion-item -->
@@ -163,8 +161,7 @@
               </div><!-- /.accordion-item-header -->
               <div id="collapse5" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
+                  <p>diện tích 120m2 x 2 lầu tổng diện tích 360m2 mặt sàn</p>
                 </div><!-- /.accordion-item-body -->
               </div>
             </div><!-- /.accordion-item -->
@@ -174,8 +171,7 @@
               </div><!-- /.accordion-item-header -->
               <div id="collapse6" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
+                  <p>590/16 Phan Văn Trị phường 7 Quận Gò Vấp Thành Phố Hồ Chí Minh</p>
                 </div><!-- /.accordion-item-body -->
               </div>
             </div><!-- /.accordion-item -->
@@ -185,8 +181,7 @@
               </div><!-- /.accordion-item-header -->
               <div id="collapse7" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
+                  <p>trên 190 món</p>
                 </div><!-- /.accordion-item-body -->
               </div>
             </div><!-- /.accordion-item -->
@@ -196,8 +191,7 @@
               </div><!-- /.accordion-item-header -->
               <div id="collapse8" class="collapse" data-parent="#accordion">
                 <div class="accordion__item-body">
-                  <p>With any financial product that you buy, it is important that you know you are getting the best
-                    advice from a reputable company as often</p>
+                  <p>4 thực đơn thay đổi theo tuần trong tháng.</p>
                 </div><!-- /.accordion-item-body -->
               </div>
             </div><!-- /.accordion-item -->
