--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
               <div class="banner__content-text" data-aos="fade-right">
                 <div class="banner__content-text-inner">
                   <div class="heading">
-                    <span class="heading__subtitle">Welcome text</span>
-                    <h2 class="heading__title">Store Title</h2>
+                    <span class="heading__subtitle">Welcome to</span>
+                    <h2 class="heading__title">LisaBB Healthy Food</h2>
                     <div class="heading__icon">
                       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                         <path
@@ -141,7 +141,8 @@
                           transform="translate(-505 -925)"></path>
                       </svg>
                     </div>
-                    <p class="heading__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, ex blanditiis provident quia quas quos inventore unde repudiandae vitae nostrum nihil minima consequatur ratione iure obcaecati incidunt omnis magnam delectus.</p>
+                    <p class="heading__desc">Tại Việt Nam, nhu cầu sống khỏe, ăn uống “healthy” đang rất được quan tâm trong những năm gần đây. Trong đó, chế độ ăn lành mạnh, ưu tiên lựa chọn những nguyên liệu lành tính, có nguồn gốc từ thiên nhiên - được xem là cách duy trì vóc dáng và cải thiện sức khỏe hiệu quả từ bên trong. Những loại thực phẩm xanh từ tự nhiên đặc biệt được ưa chuộng trong chế độ ăn uống lành mạnh (healthy) vì không những tốt cho sức khoẻ do chứa nhiều dưỡng chất và vitamin có khả năng ngăn ngừa một số căn bệnh nguy hiểm về tim mạch, huyết áp mà còn cải thiện vẻ đẹp bên ngoài với công dụng ngăn ngừa lão hóa, hiệu quả chăm sóc da và tóc.
+                      - Tuy nhiên, để trở thành cái tên số một trong lòng người tiêu dùng vẫn là một bài toán nan giải không chỉ của LisaBB mà là của cả thị trường đồ ăn HEALTHY- một ngành hàng khá… ngách. Đầu tiên là thói quen dùng thực phẩm xanh trong đời sống thường ngày của người Việt chưa thật sự phổ biến so với các thực phẩm thông thường. Ngoài ra, mặt bằng giá của các thành phẩm trên thị trường khá cao so với mức chi tiêu trung bình dành cho một thành phẩm SALADS</p>
                     <img src="assets/images/about/signature.png" alt="signature">
                   </div><!-- /.heading -->
                 </div><!-- /.banner__content-text-inner -->
@@ -169,8 +170,8 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12">
-            <span class="banner__subtitle">Starts At {open-time}</span>
-            <h2 class="banner__title">Breakfast Menu</h2>
+            <span class="banner__subtitle">Tầm nhìn</span>
+            <h2 class="banner__title">Và mục tiêu Marketing</h2>
           </div><!-- /.col-lg-12 -->
         </div><!-- /.row -->
       </div><!-- /.container -->
@@ -188,8 +189,8 @@
               <div class="banner__content-text" data-aos="fade-left">
                 <div class="banner__content-text-inner">
                   <div class="heading mb-40">
-                    <span class="heading__subtitle">Slogan here</span>
-                    <h2 class="heading__title">Title text</h2>
+                    <span class="heading__subtitle">LisaBB</span>
+                    <h2 class="heading__title">Mục tiêu Marketing</h2>
                     <div class="heading__icon">
                       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                         <path
@@ -197,7 +198,8 @@
                           transform="translate(-505 -925)"></path>
                       </svg>
                     </div>
-                    <p class="heading__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptas, nobis nam rerum esse vitae placeat asperiores vero autem eos architecto, impedit deleniti nisi cumque fugit laboriosam sint neque unde!</p>
+                    <p class="heading__desc">Trở thành cái tên top-of-mind của người tiêu dùng trong ngành hàng Healthy.
+                      Mục tiêu truyền thông: Tăng nhận diện thương hiệu (brand awareness) và tình yêu thương hiệu (brand love).</p>
                   </div><!-- /.heading -->
                   <a href="#" class="btn btn__secondary btn__link mx-2 my-1">Explore Events</a>
                   <a href="#" class="btn btn__primary mx-2 my-1">Explore Events</a>
@@ -226,8 +228,8 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12">
-            <span class="banner__subtitle">Slogan text</span>
-            <h2 class="banner__title">Title text</h2>
+            <span class="banner__subtitle">Sứ mệnh</span>
+            <h2 class="banner__title">Thay đổi khái niệm về healthy food</h2>
           </div><!-- /.col-lg-12 -->
         </div><!-- /.row -->
       </div><!-- /.container -->
@@ -244,8 +246,8 @@
               <div class="banner__content-text" data-aos="fade-right">
                 <div class="banner__content-text-inner">
                   <div class="heading mb-40">
-                    <span class="heading__subtitle">Slogan text</span>
-                    <h2 class="heading__title">Title text</h2>
+                    <span class="heading__subtitle">“Seductive from soul to body”</span>
+                    <h2 class="heading__title">Lisabb</h2>
                     <div class="heading__icon">
                       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                         <path
@@ -253,7 +255,7 @@
                           transform="translate(-505 -925)"></path>
                       </svg>
                     </div>
-                    <p style="margin-bottom: 15px;" class="heading__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit.off praesentium, fugiat sunt enim repellendus.</p>
+                    <p style="margin-bottom: 15px;" class="heading__desc">“Quyến rũ từ tâm hồn đến ngoại hình” là ý tưởng và thông điệp chính của chiến dịch, với mong muốn tái định nghĩa từ sexy - quyến rũ thành vẻ đẹp đích thực toát ra từ sự khỏe mạnh, truyền cảm hứng ăn uống lành mạnh, và lối sống tích cực để tỏa sáng trong hành trình “vẽ đường cong” cho chính mình. Trên hành trình đó, LisaBB sẽ là người bạn đồng hành, đáp ứng nhu cầu về những sản phẩm chất lượng và tốt cho sức khỏe, giúp cải thiện sắc vóc lẫn sức khỏe thể chất và tinh thần.</p>
                     <a href="#" class="btn btn__secondary">Explore Full Menu</a>
                   </div><!-- /.heading -->
                 </div><!-- /.banner__content-text-inner -->
